--- a/Chat/src/main/java/chatClient/presentation/View.form
+++ b/Chat/src/main/java/chatClient/presentation/View.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="607" height="615"/>
+      <xy x="20" y="20" width="722" height="615"/>
     </constraints>
-    <properties/>
+    <properties>
+      <foreground color="-1120527"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="49837" binding="loginPanel" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -53,6 +55,8 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-15156455"/>
+              <foreground color="-15000805"/>
               <text value="Login"/>
             </properties>
           </component>
@@ -61,6 +65,8 @@
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-4514231"/>
+              <hideActionText value="false"/>
               <text value="Terminar"/>
             </properties>
           </component>
@@ -69,6 +75,8 @@
               <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-14910019"/>
+              <foreground color="-15000805"/>
               <text value="Registrarse"/>
             </properties>
           </component>
@@ -111,6 +119,8 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-13124816"/>
+                      <foreground color="-15000805"/>
                       <text value="Enviar"/>
                     </properties>
                   </component>
@@ -129,7 +139,9 @@
                 <children>
                   <component id="efdba" class="javax.swing.JTextPane" binding="messages">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <foreground color="-4480364"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -151,6 +163,32 @@
                   </component>
                 </children>
               </grid>
+              <grid id="7508" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="aee54" class="javax.swing.JButton" binding="addContact">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Agregar Contacto"/>
+                    </properties>
+                  </component>
+                  <component id="4d360" class="javax.swing.JTextField" binding="addC">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="200" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <component id="163f" class="javax.swing.JButton" binding="logout">
@@ -158,6 +196,8 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-4511443"/>
+              <foreground color="-15000805"/>
               <text value="Logout"/>
             </properties>
           </component>
